update: cập nhật tính năng lịch học